fix #642 upvoters hard to tap on mobile

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -501,35 +501,22 @@ div.voters {
 	align-items: center;
 }
 
-div.voters div.score {
+.upvoter:before {
+	content: "\25b2";
+	color: var(--color-fg-shape);
+	font-size: 12pt;
+}
+.upvoted .upvoter:before,
+.upvoter:hover:before {
+	color: var(--color-fg-accent);
+}
+.upvoter {
 	color: var(--color-fg-contrast-4-5);
-	font-size: 9pt;
-	text-align: center;
-}
-
-li.story div.voters div.score {
-	font-size: 9.5pt;
-	margin-top: 2px;
-}
-
-div.voters .upvoter {
-	border-color: transparent transparent var(--color-fg-shape) transparent;
-	border-style: solid;
-	border-width: 0 6px 11px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-self: center;
 	text-decoration: none;
-	width: 0px;
-	height: 0;
-	padding: 0;
-	display: block;
-}
-
-.story div.voters .upvoter {
-	margin-top: 25%;
-}
-
-div.voters .upvoter:hover,
-.upvoted div.voters .upvoter {
-	border-bottom-color: var(--color-fg-accent);
 }
 
 li.story {
@@ -1670,11 +1657,11 @@ input[type="submit"].link_post.pushover_button {
 
 	/* explicitly reset color when not upvoted, since previously-upvoted arrow
 	 * will still be triggering :hover until next tap */
-	div.voters .upvoter:hover {
-		border-bottom-color: var(--color-fg-shape);
+	div.voters .upvoter:hover:before {
+		color: var(--color-fg-shape);
 	}
-	.upvoted div.voters .upvoter {
-		border-bottom-color: var(--color-fg-accent);
+	.upvoted div.voters .upvoter:before {
+		color: var(--color-fg-accent);
 	}
 
 	ol.stories.list {
